--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -38,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "passport-yandex": "^0.0.5",
+    "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.2.0",
     "resend": "^4.0.0",
     "rxjs": "^7.8.1"
